syntax = "proto3";

option csharp_namespace = "CardStorageServiceProtos";

service ClientService {	
	rpc Create (CreateClientRequest) returns (CreateClientResponse);
}

service CardService {
	rpc GetByClientId (GetByClientIdRequest) returns (GetByClientIdResponse);
}

message CreateClientRequest{
	string Surname = 1;
	string FirstName = 2;
	string Patronymic = 3;
}

message CreateClientResponse{
	int32 ClientId = 1;
}

message GetByClientIdRequest {
	int32 ClientId = 1;
}

message GetByClientIdResponse {
	repeated Card Cards = 1;
}

message Card {
	string CardN = 1;
	string Name = 2;
	string CVV2 = 3;
	string ExpDate = 4;
}